# CPA2019

./: .atomignore  .gitignore  CMakeLists.txt  Header.cpp  Header.h  Index.cpp  Index.h  README.md  Sequence.cpp  Sequence.h  SequenceReader.cpp  SequenceReader.h  Smith_Waterman.cpp  Smith_Waterman.h  e_base.fasta  e_base.fasta.phr  e_base.fasta.pin  e_base.fasta.psq  experience.cpp  main  main.cpp  makefile  result.txt  swipe  test.cpp  test_phr.cpp  test_psq.cpp
